syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package todo;

option go_package = "./pb";

service TodoService {
    rpc GetTodoLists(TodoListFilter) returns (TodoListsResponse);
    rpc CreateTodoList(TodoListRequest) returns (TodoListResponse);
    rpc GetTodoList(ID) returns  (TodoListResponse);
    rpc UpdateTodoList(UpdateTodoListRequest) returns (TodoListResponse);
    rpc DeleteTodoList(ID) returns (google.protobuf.Empty);

    rpc CreateTodo(TodoRequest) returns (TodoResponse);
    rpc UpdateTodo(TodoUpdateRequest) returns (TodoResponse);
    rpc DeleteTodo(ID) returns (google.protobuf.Empty);
}

message TodoResponse {
    int32 id = 1;
    int32 listId = 2;
    string name = 3;
    bool completed = 4;
    google.protobuf.Timestamp createdAt = 5;
}

message TodoListResponse {
    int32 id = 1;
    int32 userId = 2;
    string name = 3;
    repeated TodoResponse todos = 4;
    google.protobuf.Timestamp createdAt = 5;
}

message TodoRequest {
    int32 id = 1;
    int32 listId = 2;
    string name = 3;
}

message TodoUpdateRequest {
    int32 id = 1;
    string name = 2;
    bool completed = 3;
}

message TodoListRequest {
    string name = 1;
    int32 userId = 2;
}

message UpdateTodoListRequest {
    int32 id = 1;
    string name = 2;
}

message TodoListFilter {
    int32 userId = 1;
}

message TodoListsResponse {
    repeated TodoListResponse lists = 1;
}

message ID {
    int32 id = 1;
}